@@ -1,41 +1,36 @@
 import java.util.*;
 class Solution {
     public int solution(int n, int[] lost, int[] reserve) {
-        int answer = 0;
-        List<Integer> losts = new ArrayList<>();
-        List<Integer> reserves = new ArrayList<>();
-        
-        for(int i : lost) {
-            losts.add(i);
+        List<Integer> l = new ArrayList<>();
+        List<Integer> r = new ArrayList<>();
+        for(int num : reserve) {
+            r.add(num);
         }
         
-        for(int i : reserve) {
-            reserves.add(i);
-        }
-        Collections.sort(losts);
-        Collections.sort(reserves);
-        
-        for(int i : lost) {
-            if(reserves.contains(i)) {
-                reserves.remove(new Integer(i));
-                losts.remove(new Integer(i));
-            }
-        }
-        
-        answer = n - losts.size();
-        
-        for(int i : losts) {
-            if(reserves.contains(i - 1)) {
-                answer++;
-                reserves.remove(new Integer(i - 1));
+        for(int num : lost) {
+            if(r.contains(Integer.valueOf(num))) {
+                r.remove(Integer.valueOf(num));
                 continue;
             }
-            if(reserves.contains(i + 1)) {
+            l.add(num);
+        }
+        
+        int answer = n - l.size();
+        Collections.sort(l);
+        for(int num : l) {
+            if(r.contains(Integer.valueOf(num - 1))) {
+                r.remove(Integer.valueOf(num - 1));
                 answer++;
-                reserves.remove(new Integer(i + 1));
+            }
+            else if(r.contains(Integer.valueOf(num + 1))) {
+                r.remove(Integer.valueOf(num + 1));
+                answer++;
             }
         }
         
         return answer;
     }
+    
+    
+    
 }
